--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> Aman Kapur </title>
+		<title> Aman Kapur Portfolio </title>
 		
 		<link rel=stylesheet type="text/css" href ="css/style.css">
 
