--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 								<li><a href="http://olinjs-mashup-aman.herokuapp.com/"> CollabStatus </a></li>
 								<li><a href="https://github.com/fireblade99/olinjs-echonest"> Acapellizer</a> </li>
 								<li><a href="http://yourimpact.herokuapp.com/"> YourImpact </a></li>
+								<li><a href="https://github.com/fireblade99/socialsavior">Social Savior</a></li>
 								<li><a href="http://turntube.tv">TurnTube.tv</a></li>
 							</ul>
 						</div>
