--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<li><a href="http://whatisdaquestion.herokuapp.com/questions"> What is da question? </a> </li>
 								<li><a href="http://thebusstop.herokuapp.com/"> Busstop App </a> </li>
 								<li><a href="http://www.youtube.com/watch?v=SbJPDdTzNCU"> YoutubeTv </a> </li>
-								<li><a hreg="http://arxivgraph.herokuapp.com/">Journal Graph Search</a></li>
+								<li><a href="http://arxivgraph.herokuapp.com/">Journal Graph Search</a></li>
 							</ul>
 						</div>
 					</div>
