--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 						<div id="node_projects" class="links">
 							<ul>
 								<li><a href="http://olinjs-mashup-aman.herokuapp.com/"> CollabStatus </a></li>
-								<li><a href="https://github.com/fireblade99/olinjs-echonest"> Acapellizer</a> </li>
+								<li><a href="https://github.com/amankapur/olinjs-echonest"> Acapellizer</a> </li>
 								<li><a href="http://yourimpact.herokuapp.com/"> YourImpact </a></li>
-								<li><a href="https://github.com/fireblade99/socialsavior">Social Savior</a></li>
+								<li><a href="https://github.com/amankapur/socialsavior">Social Savior</a></li>
 								<li><a href="http://turntube.tv">TurnTube.tv</a></li>
 							</ul>
 						</div>
@@ -70,8 +70,8 @@
 						<a href="#" id='python'><img src="http://www.insidetech.monster.com/nfs/insidetech/attachment_images/0011/6426/python_insidetech.jpg"> </a>
 						<div id="python_projects" class="links">
 							<ul>
-								<li><a href="https://github.com/fireblade99/seamless/tree/stuff"> Seamless </a></li>
-								<li><a href="https://github.com/fireblade99/TFTPpython"> TFTPython</a> </li>
+								<li><a href="https://github.com/amankapur/seamless/tree/stuff"> Seamless </a></li>
+								<li><a href="https://github.com/amankapur/TFTPpython"> TFTPython</a> </li>
 							</ul>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 
 				<div class="contact">
 					<h2> <a href="mailto:amankapur91@gmail.com"> Email </a> </h2>
-					<h2> <a href="http://www.github.com/fireblade99"> Github </a> </h2>
+					<h2> <a href="http://www.github.com/amankapur"> Github </a> </h2>
 				</div>
 			</div>
 
